Add changeset command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "ISC"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.93"
 chrono = "0.4.38"
 clap = { version = "4.5.21", features = ["derive", "cargo"] }
 jsonxf = "1.1.1"
