--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.93"
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.21", features = ["derive", "cargo"] }
 jsonxf = "1.1.1"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_yaml = "0.9.34"
 ureq = "2.10.1"
 
 [[bin]]
