--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ edition = "2021"
 anyhow = "1.0.93"
 chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.21", features = ["derive", "cargo"] }
+env_logger = "0.11.5"
 jsonxf = "1.1.1"
+log = "0.4.22"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_yaml = "0.9.34"
 ureq = "2.10.1"
